--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <h1>Calculadora Sencilla</h1>
       <section class="screen">0</section>
 
       <section class="calc-buttons">
